app/assets/stylesheets/site.scss
/* ... */
.input-group-addon,
.input-group-btn {
  width: 1%;
  white-space: nowrap;
  vertical-align: middle;
}

.input-group-addon {
  padding: 10px;
  font-size: 14px;
  font-weight: normal;
  line-height: 1;
  text-align: center;
  background-color: #e5e5e5;
  border: 1px solid #e5e5e5;
  border-radius: 0;
}
.input-group-addon input[type="radio"],
.input-group-addon input[type="checkbox"] {
  margin-top: 0;
}

.input-group .form-control:first-child,
.input-group-addon:first-child,
.input-group-btn:first-child > .btn,
.input-group-btn:first-child > .btn-group > .btn,
.input-group-btn:first-child > .dropdown-toggle,
.input-group-btn:last-child > .btn:not(:last-child):not(.dropdown-toggle),
.input-group-btn:last-child > .btn-group:not(:last-child) > .btn {
  border-right-radius: 0;
}

.input-group-addon:first-child {
  border-right: 0;
}

.input-group .form-control:last-child,
.input-group-addon:last-child,
.input-group-btn:last-child > .btn,
.input-group-btn:last-child > .btn-group > .btn,
.input-group-btn:last-child > .dropdown-toggle,
.input-group-btn:first-child > .btn:not(:first-child),
.input-group-btn:first-child > .btn-group:not(:first-child) > .btn {
  border-left-radius: 0;
}

.input-group-addon:last-child {
  border-left: 0;
}

/*------------------------------------*\
  @COMPONENTS #DOTTED
\*------------------------------------*/
.dotted {
  border-bottom: 1px dotted #03a9f4;
}

/*------------------------------------*\
  @COMPONENTS #COLLAPSE
\*------------------------------------*/
.collapse {
  display: none;
}
.collapse.in {
  display: block;
}

tr.collapse.in {
  display: table-row !important;
  height: auto !important;
}

tbody.collapse.in {
  display: table-row-group;
}

/*------------------------------------*\
  @COMPONENTS #SCROLL
\*------------------------------------*/
.scroll {
  position: relative;
}
.scroll .container {
  position: relative;
}

.scroll__nav {
  padding-top: 20px;
  margin: 0;
  list-style: none;
  text-transform: uppercase;
  font-weight: 500;
  border-bottom: 1px solid #e5e5e5;
  background-color: #fff;
  position: fixed;
  width: 100%;
//  max-width: 1600px;
  left: 50%;
  -webkit-transform: translateX(-50%);
      -ms-transform: translateX(-50%);
          transform: translateX(-50%);
  top: 70px;
  z-index: 900;
}
.scroll__nav ul {
  margin: 0;
  padding: 0;
}
.scroll__nav .scroll__logo {
  height: 95%;
  left: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
          transform: translateY(-50%);
}
@media (max-width: 480px) {
  .scroll__nav .scroll__logo {
    display: block;
    height: auto;
    width: 80px;
    right: 5px;
  }
}
@media (max-width: 340px) {
  .scroll__nav .scroll__logo {
    display: none;
  }
}
@media (max-width: 768px) {
  .scroll__nav {
    padding-left: 20px;
  }
}
@media (max-width: 768px) {
  .scroll__nav {
    top: 40px;
  }
  .header-hide .scroll__nav {
    top: 0;
  }
}
.scroll__nav li {
  display: inline-block;
  padding-bottom: 20px;
  margin-left: 30px;
  position: relative;
  text-align: center;
  float: right;
}
.scroll__nav li a:after {
  content: '';
  width: 0;
  height: 2px;
  background-color: #03a9f4;
  display: block;
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(-50%);
      -ms-transform: translateX(-50%);
          transform: translateX(-50%);
  bottom: 0;
  -webkit-transition: all .3s ease 0s;
  transition: all .3s ease 0s;
}
@media (max-width: 480px) {
  .scroll__nav li {
    margin-left: 20px;
  }
}
.scroll__nav a {
  padding: 20px 0;
  color: #444444;
}
.scroll__nav a:hover {
  color: #03a9f4;
}
.scroll__nav a:focus {
  color: #444444 !important;
}
.scroll__nav a.active {
  color: #03a9f4;
}
.scroll__nav a.active:focus {
  color: #03a9f4 !important;
}
.scroll__nav a.active:after {
  width: 100%;
}
.modal-open .scroll__nav {
  margin-left: -8px;
}
@media (max-width: 1600px) {
  .scroll__nav {
    padding-left: 20px !important;
    padding-right: 20px !important;
  }
}

.sidebar-show .scroll__nav--fixed {
  padding-left: 280px;
}
.sidebar-hide .scroll__nav--fixed {
  padding-left: 0;
}

.scroll__nav--static {
  position: relative;
  -webkit-transform: none;
      -ms-transform: none;
          transform: none;
  top: 0;
  left: 0;
}

.scroll__content {
  padding-top: 50px;
}
.scroll__wrap .scroll__content {
  padding-bottom: 50px;
  padding-top: 0px;
}
.sidebar-show .scroll__content {
  padding-left: 20px;
}
@media (max-width: 768px) {
  .sidebar-show .scroll__content {
    padding-left: 0;
  }
}

.scroll__section {
  position: relative;
  margin-top: 30px !important;
  margin-bottom: 50px;
}
.scroll__section a[name] {
  position: absolute;
  top: 0;
  left: 0;
}

.scroll__wrap {
  overflow-y: auto;
  overflow-x: hidden;
}
.scroll__wrap .scroll__section {
  margin-bottom: 50px;

}
.scroll__wrap .scroll__section:last-child {
  margin-bottom: 0;
}

.scroll__visits {
  text-align: center;
  margin: 0 !important;
  padding: 10px;
}
@media (max-width: 768px) {
  .scroll__visits {
    float: left;
  }
}
.scroll__wrap .scroll__visits {
  margin-bottom: 20px !important;
  margin-top: 0 !important;
}

.scroll__overview {
  margin-top: 5px !important;
}

.scroll__plans {
  margin-top: 0px !important;
}

.scroll__pricing {
  margin: 0 !important;
  position: relative;
}
.body-overflow .scroll__pricing {
  overflow: auto;
}
.scroll__pricing .container {
  position: static;
  padding: 0 15px;
  min-height: -webkit-calc(100vh - 115px);
  min-height: calc(100vh - 115px);
}
.scroll__pricing .container:before, .scroll__pricing .container:after {
  content: '';
  display: table;
}
.scroll__pricing .container:after {
  clear: both;
}
@media (max-width: 768px) {
  .scroll__pricing .container {
    padding: 0;
  }
}
.scroll__pricing .right {
  width: -webkit-calc(100% - 260px);
  width: calc(100% - 260px);
  float: right;
  padding-bottom: 50px;
}
/* ... */

